--- a/README
+++ b/README
@@ -15,7 +15,7 @@
 #  along  with  this program;  if not, write to the Free Software Foundation,
 #  Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301, USA.
 
-Please read BUGS, INSTALL
+Please read INSTALL and see the site https://getfem.org/
 
 
 
